answers to all problems revised

--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -5,29 +5,120 @@ Jennifer Lee (UNI: jl2361)
 
 # Problem 1
 
-We load the Instacart data from the p8105.datasets using:
+## Data description
+
+We load the Instacart data from the p8105.datasets.
 
 ``` r
-library(p8105.datasets)
 data("instacart")
+
+instacart =
+  instacart %>%
+  as_tibble(instacart)
 ```
 
-The goal is to do some exploration of this dataset. To that end, write a
-short description of the dataset, noting the size and structure of the
-data, describing some key variables, and giving illstrative examples of
-observations. Then, do or answer the following (commenting on the
-results of each):
+This dataset contains 1384617 rows and 15 columns with each row
+representing a single product from an instacart order. Variables include
+identifiers for user, order, and product; the order in which each
+product was added to the cart. There are also data describing the day
+and time of the order, and number of days since prior order. There are
+also several item-specific variables, describing the product name,
+department, and aisle, and whether the item has been ordered by this
+user in the past. In total, there are 39123 products found in 131209
+orders from 131209 distinct users.
 
-How many aisles are there, and which aisles are the most items ordered
-from? Make a plot that shows the number of items ordered in each aisle,
-limiting this to aisles with more than 10000 items ordered. Arrange
-aisles sensibly, and organize your plot so others can read it. Make a
-table showing the three most popular items in each of the aisles “baking
-ingredients”, “dog food care”, and “packaged vegetables fruits”. Include
-the number of times each item is ordered in your table. Make a table
-showing the mean hour of the day at which Pink Lady Apples and Coffee
-Ice Cream are ordered on each day of the week; format this table for
-human readers (i.e. produce a 2 x 7 table).
+## Tables & Plots
+
+Below is a table summarizing the number of items ordered from aisle. In
+total, there are 134 aisles with fresh vegetables and fresh fruits
+holding the most items ordered.
+
+``` r
+instacart %>%
+  count(aisle) %>%
+  arrange(desc(n))
+```
+
+    ## # A tibble: 134 × 2
+    ##    aisle                              n
+    ##    <chr>                          <int>
+    ##  1 fresh vegetables              150609
+    ##  2 fresh fruits                  150473
+    ##  3 packaged vegetables fruits     78493
+    ##  4 yogurt                         55240
+    ##  5 packaged cheese                41699
+    ##  6 water seltzer sparkling water  36617
+    ##  7 milk                           32644
+    ##  8 chips pretzels                 31269
+    ##  9 soy lactosefree                26240
+    ## 10 bread                          23635
+    ## # … with 124 more rows
+
+Next is a plot that shows the number of items ordered in each aisle.
+Here, aisles are ordered by ascending number of items.
+
+``` r
+instacart %>%
+  count(aisle) %>%
+  filter(n > 10000) %>%
+  mutate(aisle = fct_reorder(aisle, n)) %>%
+  ggplot(aes(x = aisle, y = n)) +
+  geom_point() +
+  labs(title = "Number of items ordered in each aisle") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+
+Our next table shows the three most popular items in aisles
+`baking ingredients`, `dog food care`, and `packaged vegetables fruits`,
+and includes the number of times each item is ordered.
+
+``` r
+instacart %>%
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle) %>%
+  count(product_name) %>%
+  mutate(rank = min_rank(desc(n))) %>%
+  filter(rank < 4) %>%
+  arrange(desc(n)) %>%
+  knitr::kable()
+```
+
+| aisle                      | product_name                                  |    n | rank |
+|:---------------------------|:----------------------------------------------|-----:|-----:|
+| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
+| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
+| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
+| baking ingredients         | Light Brown Sugar                             |  499 |    1 |
+| baking ingredients         | Pure Baking Soda                              |  387 |    2 |
+| baking ingredients         | Cane Sugar                                    |  336 |    3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |   30 |    1 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |   28 |    2 |
+| dog food care              | Small Dog Biscuits                            |   26 |    3 |
+
+Finally, here is a table showing the mean hour of the day at which Pink
+Lady Apples and Coffee Ice Cream are ordered on each day of the week.
+This table has been formatted in an untidy manner for human readers.
+Pink Lady Apples are generally purchased slightly earlier in the day
+than Coffee Ice Cream, with the exception of day 5.
+
+``` r
+instacart %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>%
+  summarize(mean_hour = mean(order_hour_of_day)) %>%
+  spread(key = order_dow, value = mean_hour) %>%
+  knitr::kable(digits = 2)
+```
+
+    ## `summarise()` has grouped output by 'product_name'. You can override using the
+    ## `.groups` argument.
+
+| product_name     |     0 |     1 |     2 |     3 |     4 |     5 |     6 |
+|:-----------------|------:|------:|------:|------:|------:|------:|------:|
+| Coffee Ice Cream | 13.77 | 14.32 | 15.38 | 15.32 | 15.22 | 12.26 | 13.83 |
+| Pink Lady Apples | 13.44 | 11.36 | 11.70 | 14.25 | 11.55 | 12.78 | 11.94 |
 
 # Problem 2
 
@@ -40,34 +131,31 @@ includes a weekday vs weekend variable entitled `day_type`, converts
 whole numbers, and pivots the activity data from wide to long format.
 
 ``` r
-accel_df = read_csv('data/accel_data.csv', show_col_types = FALSE) %>% 
+accel_df = read_csv('data/accel_data.csv') %>% 
   janitor::clean_names() %>%
   mutate(
-    day_type = if_else(day == "Saturday", "weekend", if_else(day == "Sunday", "weekend", "weekday"))) %>%
-      select(week, day_id, day, day_type, everything()) %>%
+    day_type = if_else(day == "Saturday", "weekend", if_else(day == "Sunday", "weekend", "weekday")),
+    day = fct_relevel(day, "Saturday", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday")) %>%
+  select(week, day_id, day, day_type, everything()) %>%
   pivot_longer(
     activity_1:activity_1440,
     names_to = "min", 
     names_prefix = "activity_",
-    values_to = "activity_counts"
-  ) %>%
+    values_to = "activity_counts") %>%
   mutate(
     min = as.numeric(min),
     activity_counts = round(activity_counts, digits = 0)
   )
-
-head(accel_df)
 ```
 
-    ## # A tibble: 6 × 6
-    ##    week day_id day    day_type   min activity_counts
-    ##   <dbl>  <dbl> <chr>  <chr>    <dbl>           <dbl>
-    ## 1     1      1 Friday weekday      1              88
-    ## 2     1      1 Friday weekday      2              82
-    ## 3     1      1 Friday weekday      3              64
-    ## 4     1      1 Friday weekday      4              70
-    ## 5     1      1 Friday weekday      5              75
-    ## 6     1      1 Friday weekday      6              66
+    ## Rows: 35 Columns: 1443
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr    (1): day
+    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 To briefly summarize, there are 50400 observations of activity counts
 for each minute of each day across the 5 week study period. Our final
@@ -82,20 +170,20 @@ Wednesdays), but there is substantial variability per week. For example:
 weeks 1-2, the highest activity counts seem to be recorded over the
 weekend vs. week 3, the highest activity count seems to be recorded on
 Monday vs. week 5, the highest activity counts seem to be recorded on
-Thursday through Friday.
+Thursday through Friday. Of note, we notice a couple outliers for
+activity counts recorded on Saturday during weeks 4 and 5; 1440 seems to
+be a strange total activity count as it would indicate 1 count per
+minute over the course of the day. This needs further investigation.
 
 ``` r
 accel_df %>%
   group_by(week, day) %>%
   summarize(
-    total_daily_activity = sum(activity_counts)
-  ) %>%
+    total_daily_activity = sum(activity_counts)) %>%
   pivot_wider(
     names_from = "day", 
-    values_from = "total_daily_activity"
-  ) %>%
-  select("week", "Saturday", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday") %>%
-knitr::kable() 
+    values_from = "total_daily_activity") %>%
+  knitr::kable() 
 ```
 
     ## `summarise()` has grouped output by 'week'. You can override using the
@@ -114,7 +202,7 @@ knitr::kable()
 **Here is a single-panel plot that shows the 24-hour activity time
 courses for each day with color to indicate day of the week.** Based on
 this graph, it appears that activity counts seem to be generally lower
-during the middle of the week (i.e. Wednesdays) and higher on Fridays
+during the middle of the week (e.g. Wednesdays) and higher on Fridays
 and weekend days. There seem to be spikes in activity counts around
 minutes 540, 720, 990, and 1260 when examining the activity data over
 the course of a single day.
@@ -132,25 +220,24 @@ accel_df %>%
   ) 
 ```
 
-<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
 # Problem 3
 
 ## Data description
 
-We load the NY NOAA data from the p8105.datasets package and clean the
-variable names.
+We load the NY NOAA data from the p8105.datasets.
 
 ``` r
-library(p8105.datasets)
 data("ny_noaa") 
 
-noaa_df = ny_noaa %>%
-  janitor::clean_names()
+noaa_df = 
+  ny_noaa %>%
+  as_tibble(ny_noaa) 
 ```
 
 To briefly summarize, there are 2595176 rows / observations and 7
-variables including:
+columns / variables including:
 
 -   `id`: weather station ID (character variable)
 -   `date`: date of observation (date variable)
@@ -158,9 +245,9 @@ variables including:
 -   `snow`: snowfall in mm (integer variable)  
 -   `snwd`: snow depth in mm (integer variable)
 -   `tmax`: maximum temperature in tenths of degrees C (character
-    variable, we will need to convert to a numerical variable)
+    variable, which will need to be converted to a numerical variable)
 -   `tmin`: minimum temperature in tenths of degrees C (character
-    variable, we will need to convert to a numerical variable)
+    variable, which will need to converted to a numerical variable)
 
 Using the `summary` function, we notice that there are a lot of missing
 data in this dataset, particularly for the following variables: `prcp`,
@@ -213,7 +300,8 @@ by 10 to convert units from tenths of degrees C to degrees C and divide
 the precipitation values by 10 to convert units from tenths of mm to mm.
 
 ``` r
-noaa_df = noaa_df %>%
+noaa_df = 
+  noaa_df %>%
   janitor::clean_names() %>%
   separate(col = date, into = c('year', 'month', 'day'), sep = "-") %>%
   mutate(
@@ -227,27 +315,15 @@ noaa_df = noaa_df %>%
     tmin = tmin/10,
     prcp = prcp/10
   )
-
-head(noaa_df)
 ```
-
-    ## # A tibble: 6 × 9
-    ##   id           year month   day  prcp  snow  snwd  tmax  tmin
-    ##   <chr>       <dbl> <dbl> <dbl> <dbl> <int> <int> <dbl> <dbl>
-    ## 1 US1NYAB0001  2007    11     1    NA    NA    NA    NA    NA
-    ## 2 US1NYAB0001  2007    11     2    NA    NA    NA    NA    NA
-    ## 3 US1NYAB0001  2007    11     3    NA    NA    NA    NA    NA
-    ## 4 US1NYAB0001  2007    11     4    NA    NA    NA    NA    NA
-    ## 5 US1NYAB0001  2007    11     5    NA    NA    NA    NA    NA
-    ## 6 US1NYAB0001  2007    11     6    NA    NA    NA    NA    NA
 
 To find the most commonly observed value or mode for snowfall, we create
 a function to calculate the mode since R does not have a corresponding
 built-in function. We then create another dataset entitled
 `noaa_df_omit` where the missing data for snowfall are dropped, then
 find the mode, which seems to be 0 mm. From this result, we gather that
-mm may not be the most appropriate unit for snowfall and add a new
-variable entitled `snow_inch` to convert mm into inches.
+mm may not be the most appropriate unit for snowfall (it seems too
+small!) and add a new variable entitled `snow_cm` to convert mm into cm.
 
 ``` r
 find_mode <- function(x) {
@@ -266,24 +342,26 @@ find_mode(pull(noaa_df_omit, snow))
     ## [1] 0
 
 ``` r
-noaa_df = noaa_df %>%
+noaa_df %>%
   mutate(
-    snow_inch = snow / 25.4
-  ) %>%
-  select(id, year, month, day, prcp, snow, snow_inch, everything())
-
-head(noaa_df)
+    snow_cm = snow / 10) %>%
+  select(id, year, month, day, prcp, snow, snow_cm, everything())
 ```
 
-    ## # A tibble: 6 × 10
-    ##   id           year month   day  prcp  snow snow_inch  snwd  tmax  tmin
-    ##   <chr>       <dbl> <dbl> <dbl> <dbl> <int>     <dbl> <int> <dbl> <dbl>
-    ## 1 US1NYAB0001  2007    11     1    NA    NA        NA    NA    NA    NA
-    ## 2 US1NYAB0001  2007    11     2    NA    NA        NA    NA    NA    NA
-    ## 3 US1NYAB0001  2007    11     3    NA    NA        NA    NA    NA    NA
-    ## 4 US1NYAB0001  2007    11     4    NA    NA        NA    NA    NA    NA
-    ## 5 US1NYAB0001  2007    11     5    NA    NA        NA    NA    NA    NA
-    ## 6 US1NYAB0001  2007    11     6    NA    NA        NA    NA    NA    NA
+    ## # A tibble: 2,595,176 × 10
+    ##    id           year month   day  prcp  snow snow_cm  snwd  tmax  tmin
+    ##    <chr>       <dbl> <dbl> <dbl> <dbl> <int>   <dbl> <int> <dbl> <dbl>
+    ##  1 US1NYAB0001  2007    11     1    NA    NA      NA    NA    NA    NA
+    ##  2 US1NYAB0001  2007    11     2    NA    NA      NA    NA    NA    NA
+    ##  3 US1NYAB0001  2007    11     3    NA    NA      NA    NA    NA    NA
+    ##  4 US1NYAB0001  2007    11     4    NA    NA      NA    NA    NA    NA
+    ##  5 US1NYAB0001  2007    11     5    NA    NA      NA    NA    NA    NA
+    ##  6 US1NYAB0001  2007    11     6    NA    NA      NA    NA    NA    NA
+    ##  7 US1NYAB0001  2007    11     7    NA    NA      NA    NA    NA    NA
+    ##  8 US1NYAB0001  2007    11     8    NA    NA      NA    NA    NA    NA
+    ##  9 US1NYAB0001  2007    11     9    NA    NA      NA    NA    NA    NA
+    ## 10 US1NYAB0001  2007    11    10    NA    NA      NA    NA    NA    NA
+    ## # … with 2,595,166 more rows
 
 ## Plots
 
@@ -301,9 +379,9 @@ and 1984, 2000, 2004, and 2007 appear to have been unseasonably cooler
 in July (i.e. lower average tmax).
 
 ``` r
-january_averagetmax = 
+january_july_averagetmax = 
   noaa_df %>%
-  filter(month == "1") %>%
+  filter(month == "1" | month == "7") %>%
   group_by(year, month, id) %>%
   summarize(
     average_tmax = mean(tmax, na.rm = TRUE)) %>% 
@@ -311,48 +389,27 @@ ggplot(
   aes(x = year, y = average_tmax, group = id)) +
   geom_line(alpha = .2) +
   labs(
-    title = "January Average TMax",
+    title = "Average Maximum Temperature in January and July",
     y = "Temperature (degrees C)") +
   theme(legend.position = "none") +
   scale_x_continuous(
     breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1)) + 
+  facet_grid(. ~ month, labeller = label_both) 
 ```
 
     ## `summarise()` has grouped output by 'year', 'month'. You can override using the
     ## `.groups` argument.
 
 ``` r
-july_averagetmax = 
-  noaa_df %>%
-  filter(month == "7") %>%
-  group_by(year, month, id) %>%
-  summarize(
-    average_tmax = mean(tmax, na.rm = TRUE)) %>% 
-ggplot( 
-  aes(x = year, y = average_tmax, group = id)) +
-  geom_line(alpha = .2) +
-  labs(
-    title = "July Average TMax",
-    y = "Temperature (degrees C)") +
-  theme(legend.position = "none") +
-  scale_x_continuous(
-    breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
+january_july_averagetmax
 ```
 
-    ## `summarise()` has grouped output by 'year', 'month'. You can override using the
-    ## `.groups` argument.
-
-``` r
-january_averagetmax + july_averagetmax
-```
-
-<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
 
 **Here is a two-panel plot showing (i) tmax vs tmin for the full dataset
 using a hexagonal heatmap; and (ii) the distribution of snowfall values
-greater than 0 and less than 100 mm separately by year using a density
+greater than 0 and less than 100 mm separately by year using a ridge
 plot.**
 
 ``` r
@@ -361,20 +418,24 @@ tmax_tmin =
   ggplot(
     aes(x = tmax, y = tmin)) + 
   geom_hex() + 
-  labs(x = "TMax (degrees C)",
-       y = "TMin (degrees C)") +
+  labs(x = "T Max (degrees C)",
+       y = "T Min (degrees C)") +
   theme(legend.text = element_text(size = 5))
  
 snowfall = 
   noaa_df %>%
   filter(snow > 0, snow < 100) %>%
+  mutate(
+    year = as.character(year)) %>%
   ggplot(
-    aes(x = snow, group = year, color = year)) +
-      geom_density() +
+    aes(x = snow, y = year)) +
+       geom_density_ridges(scale = .5) +
   labs(x = "Snowfall (mm)",
-       y = "Density")
+       y = "Year")
 
 tmax_tmin + snowfall
 ```
 
-<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+    ## Picking joint bandwidth of 3.76
+
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
