edit activity graph to line plot

--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -1,7 +1,7 @@
 P8105 HW3
 ================
 Jennifer Lee (UNI: jl2361)
-2022-10-13
+2022-10-14
 
 # Problem 1
 
@@ -211,7 +211,7 @@ the course of a single day.
 accel_df %>%
   ggplot(
     aes(x = min, y = activity_counts, color = day)) +
-      geom_point(alpha = .5) +
+      geom_line(alpha = .5) +
   labs(title = "Daily Activity Graph",
        x = "Minutes",
        y = "Activity Counts") +
