--- a/p8105_hw3_jl2361.Rmd
+++ b/p8105_hw3_jl2361.Rmd
@@ -128,7 +128,7 @@ accel_df %>%
 accel_df %>%
   ggplot(
     aes(x = min, y = activity_counts, color = day)) +
-      geom_point(alpha = .5) +
+      geom_line(alpha = .5) +
   labs(title = "Daily Activity Graph",
        x = "Minutes",
        y = "Activity Counts") +
