--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -1,7 +1,7 @@
 P8105 HW3
 ================
 Jennifer Lee (UNI: jl2361)
-2022-10-14
+2022-10-16
 
 # Problem 1
 
@@ -245,9 +245,9 @@ columns / variables including:
 -   `snow`: snowfall in mm (integer variable)  
 -   `snwd`: snow depth in mm (integer variable)
 -   `tmax`: maximum temperature in tenths of degrees C (character
-    variable, which will need to be converted to a numerical variable)
+    variable, which will need to be converted to a numeric variable)
 -   `tmin`: minimum temperature in tenths of degrees C (character
-    variable, which will need to converted to a numerical variable)
+    variable, which will need to converted to a numeric variable)
 
 Using the `summary` function, we notice that there are a lot of missing
 data in this dataset, particularly for the following variables: `prcp`,
@@ -297,7 +297,8 @@ We clean variable names; create separate variables for year, month, and
 day and convert these to numeric variables; convert `tmax` and `tmin` to
 numeric variables. In terms of units, we divide the temperature values
 by 10 to convert units from tenths of degrees C to degrees C and divide
-the precipitation values by 10 to convert units from tenths of mm to mm.
+the precipitation values by 10 to convert units from tenths of mm to mm
+so that the values are more interpretable.
 
 ``` r
 noaa_df = 
@@ -323,7 +324,8 @@ built-in function. We then create another dataset entitled
 `noaa_df_omit` where the missing data for snowfall are dropped, then
 find the mode, which seems to be 0 mm. From this result, we gather that
 mm may not be the most appropriate unit for snowfall (it seems too
-small!) and add a new variable entitled `snow_cm` to convert mm into cm.
+small!) and add a new variable entitled `snow_cm` to convert mm into cm,
+which is a more common unit to report snowfall.
 
 ``` r
 find_mode <- function(x) {
@@ -381,7 +383,7 @@ in July (i.e. lower average tmax).
 ``` r
 january_july_averagetmax = 
   noaa_df %>%
-  filter(month == "1" | month == "7") %>%
+  filter(month %in% c(1, 7)) %>%
   group_by(year, month, id) %>%
   summarize(
     average_tmax = mean(tmax, na.rm = TRUE)) %>% 
